force-app/main/default/objects/fw1__Payment_Activity__c/fw1__Payment_Activity__c.object-meta.xml
<CustomObject>
    <label>Payment Activity</label>
    <nameField>
        <label>Payment Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>