force-app/main/default/objects/fw1__Payment_Activity__c/fields/External_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Payment_Id__c</fullName>
    <formula>fw1__Payment__r.External_Record_Id__c</formula>
    <label>External Payment Id</label>
    <type>Text</type>
</CustomField>