force-app/main/default/objects/fw1__Payment_Activity__c/fields/fw1__Applied_To_Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Applied_To_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied To Invoice</label>
    <type>Checkbox</type>
</CustomField>