force-app/main/default/objects/fw1__Payment_Activity__c/fields/fw1__Invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Payment Activities</relationshipLabel>
    <relationshipName>Payment_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>