force-app/main/default/objects/fw1__Payment_Activity__c/fields/fw1__Invoice_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice_Paid_Amount__c</fullName>
    <formula>IF( fw1__Applied_To_Invoice__c, 
    IF( fw1__Payment__r.fw1__Invoice__c != null, 
        fw1__Payment__r.fw1__Total_Paid_Amount__c, 
        IF( fw1__Payment__r.fw1__Total_Paid_Amount__c = 0, 
            0, 
            fw1__Amount__c
        ) 
    ), 
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>