force-app/main/default/objects/fw1__Payment_Activity__c/fields/fw1__Note__c.field-meta.xml
<CustomField>
    <fullName>fw1__Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>