force-app/main/default/objects/fw1__Payment_Activity__c/fields/fw1__Payment__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>fw1__Payment__c</referenceTo>
    <relationshipLabel>Payment Activities</relationshipLabel>
    <relationshipName>Payment_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>