force-app/main/default/objects/fw1__Payment_Activity__c/fields/fw1__Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Refund_Type__c</fullName>
    <label>Refund Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>