force-app/main/default/objects/fw1__Payment_Activity__c/fields/fw1__Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Remaining_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>