force-app/main/default/objects/fw1__Payment_Activity__c/fields/fw1__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>