force-app/main/default/objects/fw1__Payment_Activity__c/fields/fw1__Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>